To fix NGINX 504 gateway , using for example:  http://localhost/allrunning/09 - Incresed Nginx /App Timeout - SYSR-000

--- a/flask-index/etc/nginx/conf.d/nginx.conf
+++ b/flask-index/etc/nginx/conf.d/nginx.conf
@@ -9,6 +9,8 @@ server {
     location @app {
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi.sock;
+        uwsgi_read_timeout 1800;
+        uwsgi_send_timeout 900;
     }
     location /static {
         alias /app/static;
