--- a/flask-index/etc/nginx/conf.d/nginx.conf
+++ b/flask-index/etc/nginx/conf.d/nginx.conf
@@ -9,8 +9,9 @@ server {
     location @app {
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi.sock;
-        uwsgi_read_timeout 1800;
-        uwsgi_send_timeout 900;
+        uwsgi_read_timeout 10m;
+        uwsgi_send_timeout 10m;
+        proxy_read_timeout 10m;
     }
     location /static {
         alias /app/static;
