--- a/flask-index/etc/nginx/conf.d/nginx.conf
+++ b/flask-index/etc/nginx/conf.d/nginx.conf
@@ -11,7 +11,9 @@ server {
         uwsgi_pass unix:///tmp/uwsgi.sock;
         uwsgi_read_timeout 10m;
         uwsgi_send_timeout 10m;
-        proxy_read_timeout 10m;
+	proxy_connect_timeout      10m;
+	proxy_send_timeout         10m;
+	proxy_read_timeout         10m;
     }
     location /static {
         alias /app/static;
@@ -27,6 +29,10 @@ server {
         proxy_cache_valid  200 302 60m;
         proxy_cache_valid  301     24h;
         proxy_cache_valid  any      1m;
+        proxy_connect_timeout      10m;
+        proxy_send_timeout         10m;
+        proxy_read_timeout         10m;
+
     }
 
     # Proxy pass to /service/
@@ -37,6 +43,10 @@ server {
         proxy_cache_valid  200 302 60m;
         proxy_cache_valid  301     24h;
         proxy_cache_valid  any      1m;
+        proxy_connect_timeout      10m;
+        proxy_send_timeout         10m;
+        proxy_read_timeout         10m;
+
     }
 
     # We don't want nginx doing 301 redirects on /service
@@ -47,6 +57,10 @@ server {
         proxy_cache_valid  200 302 60m;
         proxy_cache_valid  301     24h;
         proxy_cache_valid  any      1m;
+        proxy_connect_timeout      10m;
+        proxy_send_timeout         10m;
+        proxy_read_timeout         10m;
+
     }
 
     location /nginx_status {
