--- a/project.yml
+++ b/project.yml
@@ -1,18 +1,13 @@
 version: '2'
 services:
   lb:
-    image: haproxy
+    image: lb_nginx
     links:
             - my_application_img1
             - my_application_img2
             - my_application_img3
     ports:
             - '80:80'
-    environment:
-            - APPSESSION 
-            - TIMEOUT  
-    volumes:
-            - /var/run/docker.sock:/var/run/docker.sock
   my_application_img1:
     image: flask-index
     depends_on:
